clusters/app.ci/quayio-pull-through-cache/qci-pull-through-cache-us-east-1.yaml
apiVersion: v1
kind: List
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: qci-pull-through-cache-us-east-1
    namespace: ci
  spec:
    to:
      kind: Service
      name: qci-pull-through-cache-us-east-1
    tls:
      termination: Edge
      insecureEdgeTerminationPolicy: Redirect
- apiVersion: v1
  kind: Service
  metadata:
    name: qci-pull-through-cache-us-east-1
    namespace: ci
  spec:
    selector:
      app: qci-pull-through-cache-us-east-1
    ports:
    - port: 5000
      targetPort: 5000
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: qci-pull-through-cache-us-east-1
    namespace: ci
    labels:
      app: qci-pull-through-cache-us-east-1
  spec:
    replicas: 0
    selector:
      matchLabels:
        app: qci-pull-through-cache-us-east-1
    template:
      metadata:
        labels:
          app: qci-pull-through-cache-us-east-1
      spec:
        tolerations:
        - key: node-role.kubernetes.io/infra
          operator: Exists
        nodeSelector:
          node-role.kubernetes.io: infra
        containers:
        - command:
          - /tp-entrypoint.sh
          name: qci-cache
          image: registry.ci.openshift.org/ci/docker-registry:tp-2.8.1
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
          - mountPath: /etc/quay-io-pull-credentials
            name: qci-robot-credentials
          - mountPath: /etc/docker-registry
            name: config
        volumes:
        - name: config
          configMap:
            name: qci-pull-through-cache-aws
        - name: qci-robot-credentials
          secret:
            secretName: qci-robot-credentials
            items:
            - key: username
              path: quay_io_username
            - key: password
              path: quay_io_password
