clusters/app.ci/quayio-pull-through-cache/quayio-pull-through-cache-gcs.yaml
apiVersion: v1
kind: List
items:
- kind: ConfigMap
  apiVersion: v1
  metadata:
    name: quayio-pull-through-cache-gcp
    namespace: ci
  data:
    config.yml: |-
      [...]
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: quayio-pull-through-cache-gcs
    namespace: ci
  spec:
    to:
      kind: Service
      name: quayio-pull-through-cache-gcs
    tls:
      termination: Edge
      insecureEdgeTerminationPolicy: Redirect
- apiVersion: v1
  kind: Service
  metadata:
    name: quayio-pull-through-cache-gcs
    namespace: ci
  spec:
    selector:
      app: quayio-pull-through-cache-gcs
    ports:
    - port: 5000
      targetPort: 5000
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: quayio-pull-through-cache-gcs
    namespace: ci
    labels:
      app: quayio-pull-through-cache-gcs
  spec:
    replicas: 0
    selector:
      matchLabels:
        app: quayio-pull-through-cache-gcs
    template:
      metadata:
        labels:
          app: quayio-pull-through-cache-gcs
      spec:
        tolerations:
        - key: node-role.kubernetes.io/infra
          operator: Exists
        nodeSelector:
          node-role.kubernetes.io: infra
        containers:
        - command:
          - /tp-entrypoint.sh
          name: quayio-cache
          image: registry.ci.openshift.org/ci/docker-registry:tp-2.8.2-gcs
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
          - mountPath: /etc/quay-io-pull-credentials
            name: quay-io-pull-credentials
          - mountPath: /etc/docker-registry
            name: config
        volumes:
        - name: config
          configMap:
            name: quayio-pull-through-cache-gcp
        - name: quay-io-pull-credentials
          secret:
            secretName: quay-io-pull-credentials
