clusters/app.ci/quayio-pull-through-cache/quayio-pull-through-cache-us-west-2.yaml
apiVersion: v1
kind: List
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: quayio-pull-through-cache-us-west-2
    namespace: ci
  spec:
    to:
      kind: Service
      name: quayio-pull-through-cache-us-west-2
    tls:
      termination: Edge
      insecureEdgeTerminationPolicy: Redirect
- apiVersion: v1
  kind: Service
  metadata:
    name: quayio-pull-through-cache-us-west-2
    namespace: ci
  spec:
    selector:
      app: quayio-pull-through-cache-us-west-2
    ports:
    - port: 5000
      targetPort: 5000
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: quayio-pull-through-cache-us-west-2
    namespace: ci
    labels:
      app: quayio-pull-through-cache-us-west-2
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: quayio-pull-through-cache-us-west-2
    template:
      metadata:
        labels:
          app: quayio-pull-through-cache-us-west-2
      spec:
        containers:
        - name: quayio-cache
          image: registry.ci.openshift.org/ci/quayio-pull-through-cache:latest
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
          - mountPath: /etc/pull-secret
            name: pull-secret
            readOnly: true
        volumes:
        - name: pull-secret
          secret:
            secretName: registry-pull-credentials
